fix: runtime mapper cycle severing, inherited generics, and container allocation
Cycle severing now cuts only active back-edges (shared acyclic references map independently), parameterized container subclasses resolve element/key types through their generic supertypes, sorted containers keep or explicitly refuse comparators, method-reference metadata moves to ClassValue so application class loaders can unload, and container lifts allocate from input size — copy-on-write containers build in bulk (115x at 4,096 elements on CI, 99.7% less allocation).

Co-authored-by: xchopin <xchopin@users.noreply.github.com>